# pokemon-catalog

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  requirements.md
.claude/commands/: project-status.md
.github/workflows/: frontend.yml  tauri.yml
agent-context/: implementation-status.md
docs/: architecture.md  branch-protection.md  implementation-plan.md
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/__tests__/application/: AddCardToCatalog.test.ts  GetCardDetail.test.ts  ScanSession.test.ts  SearchCatalog.test.ts
src/__tests__/domain/: entities.test.ts
src/__tests__/infrastructure/: BrowserImageCacheAdapter.test.ts  CachingCardDataProvider.test.ts  FilesystemImageCacheAdapter.test.ts  IndexedDBRepositories.test.ts  PokemonTCGApiClient.test.ts  SQLiteRepositories.test.ts  anthropicVisionClient.test.ts  cardPresenceDetector.test.ts  framePreprocessor.test.ts  hybridIdentificationService.test.ts  localPHashIdentifier.test.ts  migrations.test.ts  openaiVisionClient.test.ts  pHash.test.ts  pHashIndexBuilder.test.ts  settingsStore.test.ts  sqlTestDatabase.ts  stubs.test.ts
src/__tests__/presentation/: CardGrid.test.tsx  CardList.test.tsx  CatalogSkeleton.test.tsx  ConfirmationPanel.test.tsx  FilterBar.test.tsx  IndexRefreshBanner.test.tsx  PageErrorBoundary.test.tsx  ScannerPage.test.tsx  SettingsPage.test.tsx  ViewToggle.test.tsx  pages.test.tsx  useCardImage.test.ts  useIndexStats.test.ts  usePHashIndexBuild.test.ts
(+60 files in other folders)
