[package]
name = "pokemon-catalog"
version = "0.1.0"
description = "Pokemon Card Catalog"
authors = []
edition = "2021"

[lib]
name = "pokemon_catalog_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
